--- a/src/modulo-04-C#/Dia1 exercicios/ConsoleApp/ConsoleApp/ConsoleApp.csproj
+++ b/src/modulo-04-C#/Dia1 exercicios/ConsoleApp/ConsoleApp/ConsoleApp.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Agenda.cs" />
     <Compile Include="Contato.cs" />
+    <Compile Include="Metodos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
