--- a/src/modulo-04-C#/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-C#/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banco.cs" />
+    <Compile Include="ECategoria.cs" />
     <Compile Include="Jogo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
