Adaptado para futuras mudanças, adicionado Quantidades e Disponibilidade

--- a/src/modulo-04-C#/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-C#/Locadora/Locadora.Dominio/Locadora.Dominio.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Banco.cs" />
     <Compile Include="ECategoria.cs" />
+    <Compile Include="EDisponibilidade.cs" />
     <Compile Include="Jogo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relatorio.cs" />
