--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\img\Chars.png" />
     <Content Include="Content\img\molejo.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\Style.css" />
