--- a/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.ADO/Locadora.Repositorio.ADO.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.ADO/Locadora.Repositorio.ADO.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +60,9 @@
   <ItemGroup>
     <Content Include="SQL\01 - CriarBase.sql" />
     <Content Include="SQL\02 - PopularJogos.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
