--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=SUBTARDIS\SQLEXPRESS;Database=Locadora;Trusted_Connection=True;"
-         providerName="System.Data.SqlClient" />
+    <add name="LOCADORA" connectionString="Server=NB-002685\SQLEXPRESS;Database=Locadora;User Id=sa;
+                                              Password=Crescer$5;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
