Refatoração de Jogo

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -104,14 +104,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
-    <Content Include="Views\Relatorio\JogosDisponiveis.cshtml" />
+    <Content Include="Views\Jogo\JogosDisponiveis.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\Jogo\BuscarJogosController.cs" />
-    <Compile Include="Controllers\Jogo\HomeController.cs" />
-    <Compile Include="Controllers\Jogo\DescricaoController.cs" />
-    <Compile Include="Controllers\Jogo\RelatorioController.cs" />
+    <Compile Include="Controllers\Jogo\JogoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -131,7 +128,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Descricao\Detalhes.cshtml" />
+    <Content Include="Views\Jogo\Detalhes.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -141,7 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\BuscarJogos\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
