--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/web.config
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Views/web.config
@@ -17,6 +17,7 @@
                 <add namespace="System.Web.Routing" />
                 <add namespace="Locadora.Web.MVC" />
                 <add namespace="Locadora.Web.MVC.Models" />
+                <add namespace="System.Web.Optimization" />
             </namespaces>
         </pages>
     </system.web.webPages.razor>
