--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -147,6 +147,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Jogo\Detalhes.cshtml" />
+    <Content Include="Views\Jogo\Editar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
