--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -15,8 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="LOCADORADOIS" connectionString="Server=NB-002685\SQLEXPRESS;Database=Locadora;User Id=sa;
-                                         Password=Crescer$5;" providerName="System.Data.SqlClient" />
+    <add name="LOCADORA" connectionString="Server=SUBTARDIS\SQLEXPRESS;Database=LocadoraDois;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
