--- a/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.EF.DbFirst/App.config
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.EF.DbFirst/App.config
@@ -4,16 +4,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="LOCADORA" connectionString="Server=SUBTARDIS\SQLEXPRESS;Database=LocadoraDois;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=NB-002685\SQLEXPRESS;Database=Locadora;User Id=sa;
-                                         Password=Crescer$5;" providerName="System.Data.SqlClient" />
-    <add name="LOCADORADOIS" connectionString="Server=NB-002685\SQLEXPRESS;Database=Locadora;User Id=sa;
-                                         Password=Crescer$5;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
 </configuration>
