--- a/src/modulo-04-C#/Locadora2.0/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Dominio/Locadora.Dominio.csproj
@@ -44,11 +44,13 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Jogo.cs" />
+    <Compile Include="Permissao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relatorio.cs" />
     <Compile Include="Repositorio\IClienteRepositorio.cs" />
     <Compile Include="Repositorio\IJogoRepositorio.cs" />
     <Compile Include="Selo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
