--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -143,6 +143,9 @@
     <Compile Include="Models\Jogo\JogoModel.cs" />
     <Compile Include="Models\Jogo\RelatorioModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seguranca\Autorizador.cs" />
+    <Compile Include="Seguranca\Contoller\LoginController.cs" />
+    <Compile Include="Seguranca\Model\UsuarioModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -156,6 +159,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Jogo\Detalhes.cshtml" />
     <Content Include="Views\Jogo\Editar.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
