--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -142,9 +142,11 @@
     <Compile Include="Models\Jogo\DescricaoModel.cs" />
     <Compile Include="Models\Jogo\JogoModel.cs" />
     <Compile Include="Models\Jogo\RelatorioModel.cs" />
+    <Compile Include="Models\Login\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguranca\Autorizador.cs" />
-    <Compile Include="Seguranca\Contoller\LoginController.cs" />
+    <Compile Include="Controllers\Jogo\LoginController.cs" />
+    <Compile Include="Seguranca\ControleDeSessao.cs" />
     <Compile Include="Seguranca\Model\UsuarioModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +181,10 @@
     <ProjectReference Include="..\Locadora.Repositorio.EF\Locadora.Repositorio.EF.csproj">
       <Project>{0e422659-1cfe-4737-9cb8-f76c908b05ac}</Project>
       <Name>Locadora.Repositorio.EF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{e0e2461f-c83e-48e9-b080-7c36b022f581}</Project>
+      <Name>Services</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
