Refactoring em andamento

--- a/src/modulo-04-C#/Locadora2.0/Services/Services.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Services/Services.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\Validacao.cs" />
+    <Compile Include="Security\Criptografia.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
