--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Web.config
@@ -14,9 +14,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=SUBTARDIS\SQLEXPRESS;Database=LocadoraDois;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+ <connectionStrings>
+   <add name="LOCADORADOIS" connectionString="Server=NB-002685\SQLEXPRESS;Database=LocadoraDois;User ID=sa;Password=Crescer$5;" providerName="System.Data.SqlClient" />
+ </connectionStrings> 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
