--- a/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\201511101800060_Atualizacao.Designer.cs">
       <DependentUpon>201511101800060_Atualizacao.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511112315045_Refactoring 3.cs" />
+    <Compile Include="Migrations\201511112315045_Refactoring 3.Designer.cs">
+      <DependentUpon>201511112315045_Refactoring 3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.Repositorio.EF.cs" />
@@ -80,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511101800060_Atualizacao.resx">
       <DependentUpon>201511101800060_Atualizacao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511112315045_Refactoring 3.resx">
+      <DependentUpon>201511112315045_Refactoring 3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
