--- a/src/modulo-04-C#/Locadora2.0/Services/Services.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Services/Services.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocacaoService\LocacaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CriptografiaRepositorio.cs" />
   </ItemGroup>
@@ -53,6 +54,7 @@
       <Name>Locadora.Repositorio.EF</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
