Implementado Base para Devolver Jogo

--- a/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-C#/Locadora2.0/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Models\Jogo\DescricaoModel.cs" />
     <Compile Include="Models\Jogo\JogoModel.cs" />
     <Compile Include="Models\Jogo\RelatorioModel.cs" />
+    <Compile Include="Models\Locar\DevolverModel.cs" />
     <Compile Include="Models\Locar\LocarModel.cs" />
     <Compile Include="Models\Locar\ClienteLocar.cs" />
     <Compile Include="Models\Login\LoginModel.cs" />
@@ -201,6 +202,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Locacao\LocarPartial.cshtml" />
     <Content Include="Views\Locacao\Locar.cshtml" />
+    <Content Include="Views\Locacao\Devolver.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
